# LLMGov

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  WEEK2_SUMMARY.md  chaos_test2.py  docker-compose.yml  prompts.yaml  pyproject.toml  task.md
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: __init__.py  completions.py
app/config/: __init__.py  settings.py
app/core/: __init__.py  auth.py  cache.py  cache_keys.py  circuit_breaker.py  embeddings.py  eval.py  jailbreak.py  logging.py  pii.py  prompt_registry.py  rate_limiter.py  redis.py  telemetry.py  toxicity.py
app/middleware/: __init__.py  error_handler.py  request_id.py
app/models/: __init__.py  completions.py
docs/: LLMGov_Master_Specification.docx  data.md  postmortem.md  release_notes_v1.0_milestone_1.md  test_report.md  thinking_artifact.md  walkthrough.md
docs/adr/: 001-litellm-provider-abstraction.md  002-semantic-cache-policy.md  003-redis-startup-behavior.md  004-out-of-band-telemetry-and-eval.md  README.md  (+4 more)
infra/: main.tf
scripts/: chaos_test.py  chaos_test2.py
tests/: __init__.py  conftest.py  test_audit_hash_chain.py  test_auth.py  test_auth_rate_limit_wiring.py  test_cache_keys.py  test_cache_wiring.py  test_circuit_breaker.py  test_circuit_breaker_integration.py  test_embeddings.py  test_eval.py  test_jailbreak.py  test_jailbreak_wiring.py  test_pii.py  test_pii_wiring.py  test_prompt_registry.py  test_rate_limiter.py  test_redis_lifespan.py  test_telemetry_failure.py  test_toxicity.py  test_toxicity_wiring.py
(+6 files in other folders)
